# examentema1

./: CMakeLists.txt  README.md  asistencia.cpp  excepcionespersonalizadas.cpp  filtrado.cpp  gestiondeestudiantes.cpp  manejodeexcepciones.cpp  operacionesbasicas.cpp  optimizaciondememoria.cpp  profes.cpp  promediodelestudiante.cpp
