cmake_minimum_required(VERSION 3.26)
project(examentema1)

set(CMAKE_CXX_STANDARD 14)

add_executable(operacionesbasicas.cpp operacionesbasicas.cpp)
add_executable(gestiondeestudiantes gestiondeestudiantes.cpp)
add_executable(optimizaciondememoria optimizaciondememoria.cpp)
add_executable(manejodeexcepciones manejodeexcepciones.cpp)
add_executable(promediodelestudiante promediodelestudiante.cpp)
add_executable(asistencia asistencia.cpp)
